--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ dnspython==2.0.0
 environs==9.2.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
-PyMongo==3.11.0
+marshmallow==3.9.1
+pymongo==3.11.0
+python-dotenv==0.15.0
 Werkzeug==1.0.1
+WTForms==2.3.3
